--- a/secondPage.css
+++ b/secondPage.css
@@ -2,14 +2,17 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: #d6d6d6;
+}
 .container {
     margin: 3%;
+    margin-left: 30%;
     padding:3%;
-    height: 100%;
     width: 30%;
     background-color:white;
     line-height: 40px;
-    border: 2px solid red;
+    border-radius: 2px;
 }
 label, a {
     display: block;
@@ -24,7 +27,11 @@ label, a {
     border-radius: 3px;
     padding: 6px;
 }
+#address {
+    margin-bottom: 10px;
+}
 #Change-password-link{
+    width: 295px;
     margin-top: 10px;
     background-color: rgb(148, 49, 236);  
     border-radius: 5px;
